--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.2"
+    "mongoose": "^6.5.2",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
