package.json - added proxy

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mern-my-goals-app",
   "version": "1.0.0",
+  "proxy": "http://localhost:500",
   "description": "Personal Goalsetter App",
   "main": "server.js",
   "scripts": {
