--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "homepage": "https://github.com/alvaroormeno/mern-my-goals-app#readme",
   "dependencies": {
-    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^16.0.1",
@@ -28,8 +27,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
-    "react-icons": "^4.4.0",
-    "react-toastify": "^9.0.8"
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "concurrently": "^7.3.0",
