--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/alvaroormeno/mern-my-goals-app/issues"
   },
-  "homepage": "https://github.com/alvaroormeno/mern-my-goals-app#readme",
+  "homepage": "https://github.com/ alvaroormeno/mern-my-goals-app#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
